# liberado-calorie-counter-mcp

./: .dockerignore  .env.example  ARCHITECTURE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
liberado-core/: Cargo.toml
liberado-core/src/: error.rs  estimator.rs  lib.rs  models.rs
liberado-import/: Cargo.toml
liberado-import/src/: main.rs
liberado-mcp/: Cargo.toml
liberado-mcp/src/: config.rs  constants.rs  error.rs  food.rs  lib.rs  main.rs  server.rs  units.rs
migrations/: 0001_initial_schema.sql  0002_api_key_hash_index.sql
