[workspace]
members = ["liberado-core", "liberado-mcp", "liberado-import"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.89"

[workspace.dependencies]
liberado-core = { path = "liberado-core" }

tokio       = { version = "1",    features = ["full"] }
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"
thiserror   = "2"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest     = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono      = { version = "0.4",  features = ["serde"] }
uuid        = { version = "1",    features = ["v4", "serde"] }
async-trait = "0.1"
serial_test = "3"

sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
    "uuid",
    "json",
] }

turbomcp = { version = "3.1.4", features = ["stdio", "http"] }
argon2   = "0.5"
clap     = { version = "4", features = ["derive"] }
